# tts-toolkit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.claude/skills/audiobook/: SKILL.md
.claude/skills/dialogue/: SKILL.md
.claude/skills/podcast/: SKILL.md
.claude/skills/quick-tts/: SKILL.md
.claude/skills/voice-profile/: SKILL.md
.claude/skills/voiceover/: SKILL.md
docs/: advanced-features.md  api-reference.md  benchmarks.md  evaluation.md  getting-started.md  skills-guide.md  troubleshooting.md  voice-profiles.md
examples/: audiobook_from_markdown.py  dialogue_generation.py  podcast_two_speakers.py  simple_voiceover.py
tests/: __init__.py  test_backends.py  test_batch_stress.py  test_cli.py  test_core.py  test_error_handling.py  test_evaluation.py  test_export.py  test_utils.py  test_voices.py
tts_toolkit/: __init__.py  __main__.py  cli.py
tts_toolkit/backends/: __init__.py  bark.py  base.py  chatterbox.py  coqui_xtts.py  cosyvoice.py  fish_speech.py  kokoro.py  mock.py  qwen.py
tts_toolkit/core/: __init__.py  chunker.py  mixer.py  pipeline.py  stitcher.py
tts_toolkit/evaluation/: __init__.py  comparison.py  evaluator.py  metrics.py
tts_toolkit/export/: __init__.py  formats.py  mp3.py  srt_generator.py  wav.py
tts_toolkit/formats/: __init__.py  audiobook.py  base.py  dialogue.py  podcast.py  voiceover.py
tts_toolkit/parsers/: __init__.py  dialogue_markup.py  markdown.py  plain_text.py  screenplay.py
tts_toolkit/timing/: __init__.py  duration_estimator.py  srt_parser.py  sync.py
tts_toolkit/utils/: __init__.py  batch.py  config.py  memory.py  metadata.py
tts_toolkit/voices/: __init__.py  emotions.py  profile.py  registry.py
tts_toolkit/voices/presets/: conversational.json  narrator.json  podcast_host.json
